feat: assistant runtime env
